# ScopeFlow

./: QA_Checklist_Brief_Scope_Evolution.md  QA_Layout_Checklist.md  README.md  eslint.config.js  index.html  manual_qa_checklist.md  package-lock.json  package.json  test-flow.ts  test-flow2.ts  test-regex.js  tsconfig.app.json  vite.config.ts
.agents/: AGENTS.md
docs/: BETA_FEEDBACK_TEMPLATE.md  BETA_TEST_CHECKLIST.md  BUILD.md  QA_Checklist_Quotation_Layout.md  RELEASE_NOTES_MVP_RC.md  RELEASE_NOTES_V0.8.md  document-templates.md  implementation-ready-spec.md  mvp-flow.md  non-goals.md  product-scope.md  scopeflow-release-qa-v0.8-checklist.md  scopeflow-stabilization-v1-real-user-flow.md  workspace-structure.md
docs/QA/: Scope-Workshop-QA.md
src/: App.tsx  index.css  vitest.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  file_commands.rs  lib.rs  main.rs
src/components/: AcceptanceArtifactPanel.tsx  AiProviderManager.tsx  ApprovalModal.tsx  BriefHelperForm.tsx  BriefIntakeModal.tsx  ChangeRequestDetectionPanel.tsx  ClientForm.tsx  ClientOverview.tsx  CompanySettingsModal.tsx  CustomerAnswerPanel.tsx  CustomerQuestionPanel.tsx  DocumentCreatorModal.tsx  DocumentLifecycleDashboard.tsx  ExportModal.tsx  HealthCheckModal.tsx  InvoiceForm.tsx  MarkdownEditor.tsx  ProjectForm.tsx  ProjectOverview.tsx  QuotationApprovalPanel.tsx  QuotationDraftPanel.tsx  QuotationForm.tsx  QuotationPriceInputPanel.tsx  QuoteReadinessPanel.tsx  ScopeBaselineFromQuotePanel.tsx  ScopeClosurePanel.tsx  ScopeControlPanel.tsx  (+5 more)
(+272 files in other folders)
