[package]
name = "scopeflow-app"
version = "0.1.0"
description = "ScopeFlow Thai — Offline-first document workspace"
authors = ["you"]
edition = "2021"

[lib]
name = "scopeflow_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.6.6"
walkdir = "2.4.0"
